# ragfallback

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL_AND_RUN.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  pytest.ini  ragfallback_colab.ipynb  requirements-dev.txt  run_all_examples.py  setup.py  verify_library.py
.github/workflows/: lint.yml  release.yml  test.yml
docs/: architecture_diagram_spec.md
examples/: _kb_common.py  baselines.json  basic_usage.py  build_golden_dataset.py  chroma_real_kb_demo.py  ci_regression_gate.py  complete_example.py  financial_risk_analysis.py  golden_docs_registry.json  golden_qa.json  golden_qa_stress.json  huggingface_example.py  legal_document_analysis.py  medical_research_synthesis.py  mlops_demo.py  multi_domain_synthesis.py  open_source_example.py  paid_llm_example.py  production_reliability_example.py  python_docs_example.py  qdrant_local_demo.py  real_data_demo.py  tech_support_example.py  uc10_metadata_sanitizer.py  uc1_retrieval_health.py  uc2_embedding_guard.py  uc3_chunk_quality.py  uc4_context_window.py  uc5_hybrid_failover.py  uc6_adaptive_rag.py  uc6_multi_hop_demo.py  uc7_rag_evaluator.py  uc8_context_stitcher.py  uc9_embedding_probe.py
examples/sample_kb/: api_authentication.md  billing_refunds.md  embedding_index_policy.md  rate_limits.md
ragfallback/: __init__.py  exceptions.py
ragfallback/core/: __init__.py  adaptive_retriever.py
ragfallback/diagnostics/: __init__.py  chunking.py  context_stitcher.py  context_window.py  embedding_guard.py  embedding_probe.py  embedding_validator.py  retrieval_health.py  schema_sanitizer.py  stale_index.py
ragfallback/evaluation/: __init__.py  rag_evaluator.py
ragfallback/mlops/: __init__.py  baseline_registry.py  golden_runner.py  locust_template.py  mlflow_logger.py  query_simulator.py  ragas_hook.py
ragfallback/retrieval/: __init__.py  failover.py  rerank_guard.py  smart_hybrid.py  wrappers.py
ragfallback/strategies/: __init__.py  base.py  multi_hop.py  query_variations.py
ragfallback/tracking/: __init__.py  cache_monitor.py  cost_tracker.py  metrics.py
ragfallback/utils/: __init__.py  confidence_scorer.py  embedding_factory.py  env.py  llm_factory.py  vector_store_factory.py
tests/: __init__.py  conftest.py  test_cost_tracker.py  test_integration.py  test_metrics.py  test_query_variations.py
tests/integration/: __init__.py  test_adaptive_workflow.py  test_chroma_pipeline.py
tests/unit/: __init__.py  test_adaptive_multi_hop_bridge.py  test_async_retriever.py  test_cache_monitor.py  test_confidence_scorer.py  test_cost_tracker.py  test_diagnostics.py  test_hybrid_retrieval.py  test_metrics.py  test_multi_hop.py  test_query_variations.py  test_retrieval.py
